--- a/templates/dns/ddns/list.html
+++ b/templates/dns/ddns/list.html
@@ -5,6 +5,8 @@
 <h2>dynamic domain names</h2>
 <div class="operation">
     <a href="{% url domain.views.ddns.create_view %}" ><img src="{{ STATIC_URL }}img/create.png" /> add a new domain </a>
+    |
+    <a href="{% url domain.views.ddns.doc_view %}" >api doc</a>
 </div>
 {% render_table table %}
 {% endblock %}
