--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
         <ol>
             {{ login_form.as_ul }}
             <li id="send">
-                <button type="submit">Log In</button>
+                <button type="submit" class="btn">Log In</button>
             </li>
         </ol>
     </form>
