--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
                             <li class="{% active_by_name request 'ddns/home' %}">
                                 <a href="{% url ddns/home %}">DynamicDNS</a>
                             </li>
+                            <li class="{% active_by_name request 'multipkg/home' %}">
+                                <a href="{% url multipkg/home %}">Packages</a>
+                            </li>
                             <li><a href="/about">About Us</a></li>
                         </ul>
                         <ul class="nav pull-right">
