added more field

--- a/templates/multipkg/detail.html
+++ b/templates/multipkg/detail.html
@@ -40,6 +40,13 @@
 <h3> Recent Changes </h3>
 <pre class="section">
 {{ object.recent_changes }}
+</pre>
+
+<h3> Comments </h3>
+<div>
 </div>
+
+</div>
+
 
 {% endblock %}
