--- a/templates/multipkg/list.html
+++ b/templates/multipkg/list.html
@@ -6,5 +6,19 @@
 <div class="operation">
     <a href="{% url multipkg.views.create_view %}" ><img src="{{ STATIC_URL }}img/create.png" /> submit a package </a>
 </div>
+<h3>Search Criteria</h3>
+<form class="form search_form" method="GET">
+    <ol>
+        <li>
+            <label>Search by</label>
+            <select name="fd">
+                <option value="0">Name,Summary</option>
+                <option value="1">Owner</option>
+            </select>
+        </li>
+        <li><label>Keywords</label><input name="wd"></li>
+        <li><label>&nbsp;</label><button>Go</button></li>
+    </ol>
+</form>
 {% render_table table %}
 {% endblock %}
