--- a/templates/account/user_form.html
+++ b/templates/account/user_form.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
+{% load bootstrap %}
 {% block content %}
 <div class="content-wrapper narrow">
     <h2>Profile: <i>{{user.username}}</i></h2>
-        <form action="" method="post" class="form">
+        <form action="" method="post" class="form-horizontal">
             {% csrf_token %}
-            <ol>
-                <li><label>username:</label><b>{{ user.username }}</b></li>
-                {{ form.as_ul }}
-                <li id="send">
-                    <button type="submit">Update</button>
-                </li>
-            </ol>
+            {{ form | bootstrap }}
+            <div class="control-group">
+                <div class="controls">
+                    <button type="submit" class="btn btn-primary">Update</button>
+                </div>
+            </div>
         </form>
     </div>
     {% endblock %}
