--- a/templates/dns/ddns/list.html
+++ b/templates/dns/ddns/list.html
@@ -2,11 +2,11 @@
 {% load django_tables2 %}
 
 {% block ddns_content %}
-<h2>dynamic domain names</h2>
-<div class="operation">
-    <a href="{% url domain.views.ddns.create_view %}" ><img src="{{ STATIC_URL }}img/create.png" /> add a new domain </a>
-    |
-    <a href="{% url domain.views.ddns.doc_view %}" >api doc</a>
+<div class="page-header">
+    <h2>dynamic domain names</h2>
 </div>
-{% render_table table %}
+{% render_table table 'dns/ddns/table.html' %}
+<div>
+    <a href="{% url 'domain.views.ddns.create_view' %}" class="btn btn-primary"><b class="icon-plus icon-white"></b> new domain </a>
+</div>
 {% endblock %}
