--- a/templates/dns/ddns/form.html
+++ b/templates/dns/ddns/form.html
@@ -1,27 +1,34 @@
 {% extends "dns/ddns/base.html" %}
+{% load bootstrap %}
+
 {% block ddns_content %}
+<div class="page-header">
+
 {% if form_action == 'create' %}
     <h2>create a new domain</h2>
 {% else %}
-    <h2>update domain: <i>{{ record }}</i></h2>
+    <h2>update domain: <small>{{ record }}</small></h2>
 {% endif %}
 
-    <form method="post" class="form">
-        {% csrf_token %}
-        {# include "base_form.html" #}
-        <ol>
-            {{ form.as_ul }}
-            <li id="send">
-                {% if form_action == 'create' %}
-                <button type="submit" class="btn create">create</button>
-                {% else %}
-                <button type="submit" class="btn update">update</button>
-                {% endif %}
-                <button type="button" onclick="history.back(0);" class="btn">cancel</button>
-            </li>
-        </ol>
-    </form>
-    {% if record %}
+</div>
 
-{% endif %}
+<div class="row">
+    <div class="span12">
+        <form method="post" class="form-horizontal">
+            {% csrf_token %}
+            {# include "base_form.html" #}
+            {{ form | bootstrap }}
+            <div class="control-group">
+                <div class="controls">
+                    {% if form_action == 'create' %}
+                    <button type="submit" class="btn">create</button>
+                    {% else %}
+                    <button type="submit" class="btn">update</button>
+                    {% endif %}
+                    <button type="button" onclick="history.back(0);" class="btn">cancel</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
