--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,8 @@
             <div class="container">
                 {% block content %}{% endblock %}
             </div>
+
+            <div id="push"></div>
         </div>
 
         <div id="footer">
